# auto-vec

./: Cargo.toml
src/: imp.rs  lib.rs
tests/: not-fn.rs  not-fn.stderr  not-non-inputs.rs  not-non-inputs.stderr  not-non-return.rs  not-non-return.stderr  parse-fn.rs  tests.rs  vec-sig.rs
