[package]
name = "auto-vec"
version = "0.1.0"
authors = ["Ziyi Yan <ziyi.yan@foxmail.com>"]
edition = "2018"
autotests = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = "1.0"

[[test]]
name = "tests"
path = "tests/tests.rs"
